[metadata]
name = azimuth-capi-operator
version = 0.1.0
description = Kubernetes operator for opinionated Cluster API clusters.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/azimuth-capi-operator


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    jinja2
    kopf
    pydantic
    pyyaml
