[metadata]
name = azimuth-capi-operator
version = 0.1.0
description = Kubernetes operator for opinionated Cluster API clusters.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/azimuth-capi-operator


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    cryptography
    easykube
    easysemver
    jinja2
    kube-custom-resource
    httpx
    kopf
    pydantic
    pyhelm3
    pyyaml
